fix(client): fix pagination and form on smaller screens

--- a/mini-message-board/client/src/index.css
+++ b/mini-message-board/client/src/index.css
@@ -5,6 +5,9 @@
 @tailwind components;
 @tailwind utilities;
 
+body{
+  background-color: #F196E5;
+}
 
 .box-shadow{
   box-shadow: 0px 5px 2px #B570AB;
